<resources>
    <string name="app_name">Aime Live App</string>

    <string name="login_btn_title">Handsome</string>
    <string name="sign_in_another_account">Sign in another account</string>
    <string name="login_means_accept_policy"><![CDATA[Login means accept to: Aimy terms & Privacy Policy]]></string>
    <string name="user_name_sample">Angelina Steven</string>
    <string name="facebook_app_id">762464601158284</string>
    <string name="fb_login_protocol_scheme">fb762464601158284</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contributor">Contributor</string>
    <string name="my_income">My Income</string>
    <string name="wallet">Wallet</string>
    <string name="my_wish">My Wish</string>
    <string name="voucher">Voucher</string>
    <string name="top_fans">Top Fans</string>
    <string name="broadcaster_sign">Broadcaster Signing</string>
    <string name="broadcaster">Broadcaster</string>
    <string name="chat">Premiere Chat</string>
    <string name="setting">Settings</string>
    <string name="profile_title">Contributor</string>
    <string name="profile_desc">OBB Coins</string>
    <string name="my_preference">My Preference</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="both_male_female">Both</string>
    <string name="stop">Stop</string>
    <string name="facial_recognition_phrase">Facial Recognition in Search mode requires face showing</string>
    <string name="actionbar_location">London</string>
    <string name="actionbar_likes">4</string>
    <string name="pornographic_and_nidity_are_not_allowed">Pornographic behavior and nudity are NOT allowed under match mode. Otherwise, you will be banned from using the match function</string>
    <string name="remove">Remove</string>
    <string name="blur_effect_disappear">Blur effect will disappear when the other sides faces th camera</string>
    <string name="other">Other</string>
    <string name="hot">Hot</string>
    <string name="purchase">Purchase</string>
    <string name="waiting_for_response">Waiting for response...</string>
    <string name="report">Report</string>
    <string name="sample_tiktok_name">shilpaShetty</string>
    <string name="sample_tiktok_verse">Doing a throwback on a wednesday... Because why not! Missing the orignal. My Romeo #Prabhudev, in the one, #fyp</string>
    <string name="likes">Likes</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="distance">Distance</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
</resources>
