<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/information_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:elevation="@dimen/_20sdp"
    android:padding="@dimen/_20sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blur_effect_disappear"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/sf_ui_medium"
        android:gravity="center"/>

    <TextView
        android:id="@+id/remove_info_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:fontFamily="@font/sf_ui_medium"
        android:textColor="@color/white"
        android:background="@drawable/green_button_bg"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_7sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pornographic_and_nidity_are_not_allowed"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_ui_medium"
        android:background="@drawable/dull_bg_rounded"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        />

</LinearLayout>
