<?xml version="1.0" encoding="utf-8"?>
<com.jem.liquidswipe.layout.LiquidSwipeFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/layout_toolbar" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/_50sdp"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_80sdp"
                        android:src="@drawable/profile_girl"
                        app:layout_collapseMode="parallax" />

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profile_pic"
                        app:layout_collapseMode="parallax" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profile_name"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/_30sdp"
                        android:paddingEnd="@dimen/_30sdp"
                        android:weightSum="3">


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                             android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_followingProfile"
                                style="@style/TextAppearance.AppCompat.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="17dp"
                                android:gravity="center_vertical"
                                android:fontFamily="@font/sf_ui_medium"
                                android:text="0"
                                android:textColor="@color/app_green" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_ui_medium"
                                android:text="@string/following"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <View
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:background="@color/black"
                            android:padding="@dimen/_5sdp" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_followerProfile"
                                style="@style/TextAppearance.AppCompat.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_ui_medium"
                                android:text="0"
                                android:textColor="@color/app_green" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_ui_medium"
                                android:text="@string/followers"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <View
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:background="@color/black"
                            android:padding="@dimen/_5sdp" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextAppearance.AppCompat.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_ui_medium"
                                android:id="@+id/tv_likeProfile"
                                android:text="0"
                                android:textColor="@color/app_green" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_ui_medium"
                                android:text="@string/likes"
                                android:textColor="@color/black" />

                        </LinearLayout>


                    </LinearLayout>

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardElevation="@dimen/_30sdp"
                    app:contentPadding="@dimen/_7sdp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/profile_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:orientation="vertical"
                        android:padding="@dimen/_5sdp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                        tools:listitem="@layout/item_profile" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</com.jem.liquidswipe.layout.LiquidSwipeFrameLayout>